# icra20-hand-object-pose

./: .gitignore  LICENSE  README.md  build.sh  config_autodataset.yaml
example/: arm_left_link_7_t_7.txt  palm_in_base7.txt
scripts/: eval_all.py  eval_utils.py
src/OpenGR_4pcs/: .travis.yml  CMakeLists.txt  README.md
src/OpenGR_4pcs/demos/: CMakeLists.txt  demo-utils.h
src/OpenGR_4pcs/demos/PCLWrapper/: CMakeLists.txt  main.cpp
src/OpenGR_4pcs/demos/PCLWrapper/pcl/registration/: super4pcs.h
src/OpenGR_4pcs/demos/PCLWrapper/pcl/registration/impl/: super4pcs.hpp
src/OpenGR_4pcs/demos/Super4PCS/: CMakeLists.txt  super4pcs_test.cc
src/OpenGR_4pcs/doc/: extend.md  overview.md
src/OpenGR_4pcs/scripts/: mat_4pcs_fast.txt  mat_super4pcs_fast.txt  run-example.sh
src/OpenGR_4pcs/src/gr/: sampling.h  shared.h
src/OpenGR_4pcs/src/gr/accelerators/: kdtree.h  normalHealSet.h  normalset.h  normalset.hpp
src/OpenGR_4pcs/src/gr/accelerators/pairExtraction/: intersectionFunctor.h  intersectionPrimitive.h
src/OpenGR_4pcs/src/gr/algorithms/: FunctorSuper4pcs.h  PointPairFilter.h  congruentSetExplorationBase.h  congruentSetExplorationBase.hpp  match4pcsBase.h  match4pcsBase.hpp  matchBase.h  matchBase.hpp  pairCreationFunctor.h
src/OpenGR_4pcs/src/gr/io/: io.cc  io.h  io_ply.h
src/OpenGR_4pcs/src/gr/utils/: logger.h
src/OpenGR_4pcs/tests/: matching.cc  matching3pcs.cc  pair_extraction.cc  testing.h
src/OpenGR_4pcs/tests/externalAppTest/: main.cpp
src/depth_sim/: CMakeLists.txt  package.xml
src/depth_sim/include/: camera.h  camera_constants.h  model.h  range_likelihood.h  scene.h  simulation_io.hpp  sum_reduce.h
src/depth_sim/src/: camera.cpp  compute_score.frag  glsl_shader.cpp  model.cpp  range_likelihood.cpp  renderScene.cpp  scene.cpp  simulation_io.cpp  single_texture.frag  single_texture.vert  sum_reduce.cpp  sum_score.frag  sum_score.vert
src/perception/: CMakeLists.txt  package.xml
src/perception/include/: ConfigParser.h  EigenDenseBaseAddons.h  Hand.h  PoseEstimator.h  PoseHypo.h  Renderer.h  SDFchecker.h  Utils.h  optim.hpp
src/perception/include/misc/: optim_options.hpp  transform_vals.hpp
src/perception/include/unconstrained/: pso.hpp
src/perception/src/: ConfigParser.cpp  Hand.cpp  PoseEstimator.cpp  PoseHypo.cpp  Renderer.cpp  SDFchecker.cpp  Utils.cpp
src/perception/src/app/: computePPF.cpp  main_realdata_auto.cpp  run_real_all.cpp
